--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chifaePlatform1-update",
+  "name": "La Plateforme Nationale de la Santé Mobile",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -17,14 +17,10 @@
     "express": "^4.17.1",
     "express-flash-messages": "^0.1.1",
     "express-session": "^1.17.2",
-    "firebase": "^8.6.5",
-    "firebase-admin": "^9.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.9",
     "mongoose-paginate-v2": "^1.4.2",
     "nodemon": "^2.0.12",
-    "pug": "^3.0.2",
-    "randomstring": "^1.2.1",
-    "uniqid": "^5.3.0"
+    "pug": "^3.0.2"
   }
 }
